--- a/sass/abstracts/_mediaqueries.scss
+++ b/sass/abstracts/_mediaqueries.scss
@@ -65,4 +65,22 @@
         text-align: center;
     }
 
+    .imgmotor{
+        margin-left: 300px;
+    }
+    .textoFloat {
+        position: relative;
+        right: 500px;
+        color: #ba8250;
+    }
+    
+    .textoFloat3{
+        position: relative;
+        padding: 50px;
+        right: 200px;
+    }
+    .contenedor{
+        max-width: 500px;
+    }
+    
 }
