--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -26,3 +26,27 @@
     font-size: 20px;
     margin-bottom: 25px;
 }
+.imgmotor {
+    align-items: center;
+    margin-top: 100px;
+    margin-left: 450px;
+    width: 550px;
+
+}
+
+.textoFloat {
+    position: relative;
+    right: 500px;
+    top: -50px;
+    color: #ba8250;
+}
+
+.textoFloat3{
+    position: relative;
+    margin-top: 370px;
+    padding: 50px;
+    right: 200px;
+}
+.contenedor{
+    max-width: 500px;
+}
